Added company and employees models with the db connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CompanyEmployee;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
